# torx-gtk4

./: CMakeLists.txt  LICENSE  README.md  audio.c  build_windows.txt  gif_animation.c  gif_animation.h  main_gtk4.c  org.torx.gtk4.desktop  torx-gtk4.gresource.xml
appindicator/: CMakeLists.txt  appindicator.c  torx-tray.gresource.xml
other/: icon.xcf  icon_round.xcf  icon_square.xcf  symbiotic.key
other/large_or_svg/: bell.xcf  block.xcf  delete.xcf  dots_all_colors.xcf  fail.xcf  globe.xcf  kill.xcf  lock.xcf  logging.xcf
theme/: dark_chat.css  light_chat.css
